# tasc

./: .clang-format  .clangd  CMakeLists.txt  Makefile  README.md  compile_flags.txt  eigen_search.md  main.cpp  todo.md
docs/records/: eigen_replacement_search.md
include/: cast_exceptions.hpp  layer.hpp  loss_calculator.hpp  msg_assert.hpp  network.hpp  tas_exceptions.hpp  tasc_exceptions.hpp  tensor_graph_base.hpp  tensor_node.hpp  tensor_operator.hpp  tensor_operator_implementations.hpp
include/tensor_graph/: tensor.cpp  tensor.hpp  tensor_graph.hpp  tensor_operator.cpp  tensor_operator.hpp  tensor_operator_implementations.hpp
